--- a/fct-api/pom.xml
+++ b/fct-api/pom.xml
@@ -57,6 +57,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>fct</groupId>
+            <artifactId>fct-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -71,11 +76,6 @@
             <version>0.1</version>
             <type>jar</type>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.7</version>
         </dependency>
     </dependencies>
     <build>
