--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>fct-interfaces</module>
         <module>fct-services</module>
         <module>fct-data</module>
+        <module>fct-common</module>
     </modules>
 
     <parent>
@@ -56,6 +57,11 @@
             <artifactId>assertj-core</artifactId>
             <version>2.3.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
         </dependency>
     </dependencies>
 
