--- a/fct-api/src/main/resources/config/application-de.yml
+++ b/fct-api/src/main/resources/config/application-de.yml
@@ -7,8 +7,8 @@ server:
 
 redis:
   host:
-    url: redis.fct.me
-    port: 9004
+    url: 127.0.0.1
+    port: 6379
     test:
       onborrow: true
     max:
@@ -25,9 +25,9 @@ mongo:
 
 mysql:
   connection:
-    url: jdbc:mysql://localhost:3006/vaccine_server_core?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&rewriteBatchedStatements=TRUE&zeroDateTimeBehavior=convertToNull
-    username: admin
-    password: admin
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&rewriteBatchedStatements=TRUE&zeroDateTimeBehavior=convertToNull
+    username: root
+    password: 3202547c
 
 
 
