--- a/fct-data/pom.xml
+++ b/fct-data/pom.xml
@@ -11,5 +11,26 @@
 
     <artifactId>fct-data</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fct</groupId>
+            <artifactId>fct-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.17</version>
+        </dependency>
+    </dependencies>
 
 </project>
