--- a/fct-interfaces/pom.xml
+++ b/fct-interfaces/pom.xml
@@ -10,6 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>fct-interfaces</artifactId>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>com.fct</groupId>
+            <artifactId>fct-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
