--- a/fct-interfaces/pom.xml
+++ b/fct-interfaces/pom.xml
@@ -16,5 +16,10 @@
             <artifactId>fct-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.fct</groupId>
+            <artifactId>fct-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
